address layout issues and minor changes

--- a/src/components/Futa/Navbar/Navbar.module.css
+++ b/src/components/Futa/Navbar/Navbar.module.css
@@ -13,7 +13,7 @@
 .moreContainer {
     display: flex;
     width: 30px;
-    height: 30px;
+    height: 25px;
     padding: 2px;
     flex-direction: column;
     justify-content: center;
@@ -137,12 +137,25 @@
 
 .tutorialBtn {
     cursor: pointer;
-    font-size: 1.3rem;
-    vertical-align: middle;
     display: flex;
+    height: var(--buttonHeightSmall, 25px);
+    padding: 4px 16px 4px 12px;
     align-items: center;
-    justify-content: center;
-    margin-right: .2rem;
+    gap: 8px;
+
+    border: 1px solid var(--dark3, #1b1e22);
+    background: var(--dark2, #14161a);
+
+    color: var(--text2, #939c9e);
+    text-align: center;
+
+    /* Mono 14 */
+    font-family: 'Fira Mono';
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    text-transform: uppercase;
 }
 
 @media (min-width: 768px) and (max-width: 1024px) {
